--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,26 @@
     line-height: 1.5;
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    background-color: #f8f6f6;
 }
 
 .wrapper {
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
+}
+
+header {
+    width: 100%;
+    text-align: center;
+}
+
+h1 {
+    margin: 30px;
+}
+
+ul li {
+    list-style: none;
 }
