--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    line-height: 1.5;
+    line-height: 2.0;
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
@@ -17,12 +17,18 @@
 header {
     width: 100%;
     text-align: center;
+    border-bottom: 1px solid rgb(223, 223, 223);
 }
 
 h1 {
-    margin: 30px;
+    margin: 40px;
+    font-size: 50px;
 }
 
 ul li {
     list-style: none;
+}
+
+li a {
+    text-decoration: none;
 }
