Added nav bar which connects to other parts of the page and added hover affects.

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,28 @@ h1 {
     font-size: 50px;
 }
 
+nav {
+    margin-bottom: 30px;
+}
+
+#top-nav a{
+    display: block;
+    font-size: 20px;
+    width: 140px;
+    height: 45px;
+    border: 1px solid grey;
+    padding: 0 10px;
+    border-radius: 20px;
+    color: grey;
+    font-weight: 400;
+}
+
+#top-nav a:hover {
+    color: white;
+    background-color: rgb(196, 196, 196);
+    transition: 0.3s;  
+}
+
 ul li {
     list-style: none;
 }
