Added the icons for socials and linked them to socials.

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,11 @@ h1 {
     font-size: 50px;
 }
 
+footer {
+    margin: 40px;
+    width: 300px;
+    margin: 0 auto;
+}
 nav {
     margin-bottom: 30px;
 }
@@ -35,7 +40,7 @@ nav {
     height: 45px;
     border: 1px solid grey;
     padding: 0 10px;
-    border-radius: 20px;
+    border-radius: 10px;
     color: grey;
     font-weight: 400;
 }
@@ -44,6 +49,15 @@ nav {
     color: white;
     background-color: rgb(196, 196, 196);
     transition: 0.3s;  
+}
+
+#bottom-nav a{
+    display: block;
+    width: 250px;
+    height: 250px;
+    padding: 0 10px;
+    text-align: center;
+    margin-top: 50px;
 }
 
 ul li {
@@ -73,7 +87,7 @@ img {
 
  main {
     border-bottom: 1px solid rgb(223, 223, 223);
-    padding-bottom: 30px;
+    padding-bottom: 50px;
  }
  .project-links {
     width: 100%;
@@ -98,7 +112,7 @@ img {
  .project-name {
      height: 100%;
      width: 100%;
-     background-color: rgba(167, 166, 166, 0.459);
+     background-color: rgba(201, 200, 200, 0.459);
      border-radius: 10px;
      color: #f8f6f6;
      font-size: 40px;
